# feldspar

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  deny.toml  frob.toml  pyproject.toml  tickets.md
.github/workflows/: ci.yml
crates/feldspar-core/: Cargo.toml
crates/feldspar-core/src/: accuracy.rs  digest.rs  dimension.rs  domain.rs  error.rs  interval.rs  lib.rs  propagation.rs  rank.rs  search.rs  symbolic.rs  units.rs
crates/feldspar-core/tests/: property.rs
crates/feldspar-library/: Cargo.toml
crates/feldspar-library/src/: elec.rs  fluids.rs  heat.rs  lib.rs  mech.rs
crates/feldspar-library/src/fluids/: compressible.rs  incompressible.rs  mod.rs
crates/feldspar-library/src/mech/: frame.rs  mod.rs  sections.rs  statics.rs  vibration.rs
crates/feldspar-library/tests/: extern_c_smoke.rs
crates/feldspar-py/: Cargo.toml
crates/feldspar-py/src/: accuracy.rs  digest.rs  dimension.rs  domain.rs  errors.rs  interval.rs  lib.rs  library.rs  propagation.rs  rank.rs  search.rs  symbolic.rs  units.rs
design/: feldspar.strata
docs/: README.md  benchmarks-memo.md
docs/feldspar/: 01-overview.md  02-quantities-and-uncertainty.md  03-solvers.md  06-regolith-pack.md  07-capability-map.md  08-open-questions.md  09-model-integration.md  10-solver-metamodel.md  11-symbolic.md
docs/implementation/: 00-architecture.md  01-interfaces.md  02-edge-cases.md  README.md  WO-01-scaffolding.md  WO-02-quantity-core.md  WO-03-solver-protocol.md  WO-05-planner.md  WO-06-solve-facade.md  WO-07-library-mech.md  WO-08-fea-pipeline.md  WO-09-regolith-pack.md  WO-10-explain-closeout.md
docs/modules/: calib.md  elec.md  examples.md  fea.md  feldspar-core.md  feldspar-library.md  feldspar-py.md  fluids.md  heat.md  logging_setup.md  materials.md  mech.md  pack.md  plan.md  solve.md  testing.md  thermo.md  top.md
docs/spec/: 01-overview.md  02-quantities-and-uncertainty.md  03-solvers.md  04-routing.md  05-fea-pipeline.md  06-regolith-pack.md  07-capability-map.md  08-open-questions.md  09-model-integration.md  10-solver-metamodel.md  11-symbolic.md  12-solver-organization.md
docs/spec/toolchain/: 00-architecture.md  01-interfaces.md  02-edge-cases.md
docs/workflow/: FINV-audit.md  README.md  dev-scripts.md  strata-system-model.md
docs/workflow/work-orders/: WO-04-propagation.md  WO-05-planner.md  WO-06-solve-facade.md  WO-09-regolith-pack.md  WO-10-explain-closeout.md  WO-11-symbolic-core.md  WO-111b-followup-closeout.md  WO-12-payload-ports.md  WO-13-budget-seeking.md  WO-14-regolith-boundary-v2.md  WO-15-parallel-execution.md  WO-16-structured-ports.md  WO-17-ngspice-tier.md  WO-18-coupled-groups.md  WO-19-solver-pack-kit.md  WO-20-thermal-fluids-wave.md  WO-21-civil-structural-wave.md  WO-22-symbolic-followups.md  WO-23-load-paths.md  WO-24-library-depth.md  WO-25-signal-integrity-models.md
examples/: 01_register_and_solve.py  02_tier_competition.py  03_fea_cantilever.py  04_pack_discharge.py  README.md
examples/lithos/: .mirror  README.md  manifold.hem  sensor_boom.hema
examples/lithos/dune_buggy/: README.md  SOLVER-TRACE.md  brake_corner.hema  brake_hydraulics.calc  brake_hydraulics.fluo  coilover.hem  coilover.hema  cooling.calc  cooling.fluo  cvt_drive.hema  dash_instrumentation.cupr  frame.hem  (+25 more)
examples/solvers/: 00_raw_protocol.py  01_sugar_coercions.py  02_relations.py  03_tables_correlations.py  04_families.py  05_expensive_and_abstraction.py  06_coupled_groups.py  README.md
fixtures/toy_solver_pack/: pyproject.toml
fixtures/toy_solver_pack/tests/: test_conformance.py
fixtures/toy_solver_pack/toy_bearings/: __init__.py
keys/: dev_ed25519.pub
python/feldspar/: __about__.py  __init__.py  _compat.py  _feldspar.pyi  catalog.py  core.py
scripts/: consistency_sweep.sh  gen_keys.py  sync_lithos_examples.py
tests/calib/: generate_records.py  test_mech_calibration.py
tests/integration/: test_design_strata_audit.py  test_elec_ngspice_pipeline.py  test_fea_payload_steps.py  test_fea_pipeline.py  test_report_fea.py  test_solver_rungs_examples.py  test_vibration_modal_tier.py
tests/regolith/: conftest.py  test_pack_boundary_v2.py  test_pack_closed_form_models.py  test_pack_conformance.py  test_pack_converters.py  test_pack_errors.py  test_pack_margin_seeking.py  test_pack_wo111_exposure.py  test_pack_wo111b_exposure.py  test_pack_wo141_fluids_network.py  test_pack_wo24_exposure.py  test_pack_wo25_exposure.py  test_payload_resolver_bridge.py
tests/unit/: test_calib.py  test_catalog_composition.py  test_core.py  test_dev_scripts.py  test_elec_ngspice.py  test_examples_run.py  test_execute.py  test_fea_ccx.py  test_fea_deck.py  test_fea_ladder.py  test_fea_results.py  test_fea_richardson.py  test_fea_solver.py  test_fea_solver_seeking.py  test_fluids_network_query.py  test_fluids_register_network.py  test_heat_wo142.py  test_library_bearing_life.py  test_library_bolted_joints.py  test_library_critical_speed.py  test_library_drive.py  test_library_elec.py  test_library_fatigue.py  test_library_fluids.py  test_library_fluids_network.py  test_library_heat.py  test_library_leadscrew.py  test_library_mech.py  test_library_member_capacity.py  test_library_plate.py  test_library_signal_integrity.py  test_library_struct.py  test_library_thermal_transient.py  test_library_thermo.py  test_library_vibe.py  test_library_weld_groups.py  test_logging_setup.py  test_materials_hardenability.py  test_materials_kinetics.py  test_materials_phase_equilibria.py  (+19 more)
tickets/: T-0001-add-doc-edges-for-public-symbols-missing-frob-doc-anchors-cov001-643-warnings.md  T-0002-add-unit-test-coverage-for-public-symbols-with-no-frob-tests-edge-test001-497-warnings.md  T-0003-add-integration-tests-for-interfaces-below-min-integration-floor-test003-26-warnings.md  T-0004-record-coverage-stamp-for-test006-run-make-coverage-frob-check-stamp-coverage.md  T-0005-clear-ruff-ty-legacy-debt-so-check-skip-ruff-ty-can-be-removed-from-frob-toml.md  T-0006-retrofit-docs-index-links-frob-describes-anchors-across-docs-spec-and-docs-workflow-then-re-enable-doc001-gates-docs-include.md
(+99 files in other folders)
