[workspace]
resolver = "2"
members = [
    "crates/feldspar-core",
    "crates/feldspar-library",
    "crates/feldspar-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/lognd/feldspar"
# Crates ship only inside the feldspar wheel; never to crates.io.
publish = false

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"
