[package]
name = "feldspar-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "feldspar_core"
crate-type = ["rlib"]

[dependencies]
tracing = { version = "0.1", features = ["log-always"] }
thiserror = "1"
libm = "0.2"
blake3 = "=1.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
