[package]
name = "feldspar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "feldspar_core"
crate-type = ["rlib"]

[dependencies]
tracing = { version = "0.1", features = ["log-always"] }
thiserror = "1"
libm = "0.2"
blake3 = "=1.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ryu = "1"

[dev-dependencies]
# default-features off: excludes the "fork"/"timeout" test-process
# machinery (rusty-fork -> tempfile -> rustix), whose newer versions pull
# getrandom>=0.3, which needs the edition2024 Cargo feature unavailable on
# the pinned toolchain (rust-toolchain.toml, 1.82.0). We don't run
# proptest in forked/timeout mode.
proptest = { version = "=1.5.0", default-features = false, features = ["std"] }

[lints]
workspace = true
