[package]
name = "feldspar-library"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "feldspar_library"
crate-type = ["rlib", "cdylib"]

[dependencies]
feldspar-core = { path = "../feldspar-core" }
tracing = "0.1"
thiserror = "1"
libm = "0.2"

[dev-dependencies]
libloading = "0.8"

[lints]
workspace = true
