[package]
name = "feldspar-py"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "_feldspar"
crate-type = ["cdylib"]

[dependencies]
feldspar-core = { path = "../feldspar-core" }
feldspar-library = { path = "../feldspar-library" }
pyo3 = { version = "0.29", features = ["extension-module"] }
pyo3-log = "0.13"
pythonize = "0.29"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[lints]
workspace = true
